Fixes #2: Add MySQL server setup.

--- a/modules/parrot_mysql/templates/parrot.cnf.erb
+++ b/modules/parrot_mysql/templates/parrot.cnf.erb
@@ -23,3 +23,6 @@ innodb_flush_method            = O_DIRECT
 innodb_file_per_table          = 1
 
 max_allowed_packet      = 128M
+
+# Just bind to all addresses.
+bind-address = 0.0.0.0
