Make the Varnish ports configurable.

--- a/modules/http_stack/templates/varnish/default.vcl.erb
+++ b/modules/http_stack/templates/varnish/default.vcl.erb
@@ -1,10 +1,10 @@
 # This is a basic VCL configuration file for varnish.  See the vcl(7)
 # man page for details on VCL syntax and semantics.
-# 
+#
 # Default backend definition.  Set this to point to your content
 # server.
-# 
+#
 backend default {
     .host = "127.0.0.1";
-    .port = "8080";
+    .port = "<%= @backend_port %>";
 }
