--- a/modules/http_stack/templates/varnish/defaults.erb
+++ b/modules/http_stack/templates/varnish/defaults.erb
@@ -31,10 +31,10 @@ MEMLOCK=82000
 #
 # DAEMON_OPTS="-a :6081 \
 #              -T localhost:6082 \
-# 	     -b localhost:8080 \
-# 	     -u varnish -g varnish \
+#        -b localhost:8080 \
+#        -u varnish -g varnish \
 #            -S /etc/varnish/secret \
-# 	     -s file,/var/lib/varnish/$INSTANCE/varnish_storage.bin,1G"
+#        -s file,/var/lib/varnish/$INSTANCE/varnish_storage.bin,1G"
 
 
 ## Alternative 2, Configuration with VCL
@@ -61,11 +61,11 @@ VARNISH_VCL_CONF=/etc/varnish/default.vcl
 # # Blank address means all IPv4 and IPv6 interfaces, otherwise specify
 # # a host name, an IPv4 dotted quad, or an IPv6 address in brackets.
 VARNISH_LISTEN_ADDRESS=
-VARNISH_LISTEN_PORT=80
+VARNISH_LISTEN_PORT=<%= @varnish_port %>
 #
 # # Telnet admin interface listen address and port
 VARNISH_ADMIN_LISTEN_ADDRESS=127.0.0.1
-VARNISH_ADMIN_LISTEN_PORT=6082
+VARNISH_ADMIN_LISTEN_PORT=<%= @admin_port %>
 #
 # # The minimum number of worker threads to start
 VARNISH_MIN_THREADS=1
@@ -85,7 +85,7 @@ VARNISH_STORAGE_SIZE=64M
 #
 # # File containing administration secret
 VARNISH_SECRET_FILE=/etc/varnish/secret
-# 
+#
 # # Backend storage specification
 VARNISH_STORAGE="file,${VARNISH_STORAGE_FILE},${VARNISH_STORAGE_SIZE}"
 #
@@ -99,7 +99,7 @@ DAEMON_OPTS="-a ${VARNISH_LISTEN_ADDRESS}:${VARNISH_LISTEN_PORT} \
              -T ${VARNISH_ADMIN_LISTEN_ADDRESS}:${VARNISH_ADMIN_LISTEN_PORT} \
              -t ${VARNISH_TTL} \
              -w ${VARNISH_MIN_THREADS},${VARNISH_MAX_THREADS},${VARNISH_THREAD_TIMEOUT} \
-	       -S ${VARNISH_SECRET_FILE} \
+         -S ${VARNISH_SECRET_FILE} \
              -s ${VARNISH_STORAGE}"
 #
 
