Adding optional support for standard naming of sub directories in the webroots (for example to specify /web as the sub directory for the vhost web root). This optional configuration can be set in the config.yml file in a similar way to other user specific configuration.

--- a/modules/http_stack/templates/apache/vhost.erb
+++ b/modules/http_stack/templates/apache/vhost.erb
@@ -2,12 +2,12 @@
 	ServerAdmin webmaster@localhost
         ServerName <%= @name %>
 
-	DocumentRoot /vagrant_sites/<%= @name %>
+	DocumentRoot /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>
 	<Directory />
 		Options FollowSymLinks
 		AllowOverride None
 	</Directory>
-	<Directory /vagrant_sites/<%= @name %>/>
+	<Directory /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		<IfModule mod_authz_core.c>
@@ -36,12 +36,12 @@
 		ServerAdmin webmaster@localhost
 	        ServerName <%= @name %>
 
-		DocumentRoot /vagrant_sites/<%= @name %>
+		DocumentRoot /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>
 		<Directory />
 			Options FollowSymLinks
 			AllowOverride None
 		</Directory>
-		<Directory /vagrant_sites/<%= @name %>/>
+		<Directory /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
       <IfModule mod_authz_core.c>
