Issue #64:  Allow selecting MySQL 5.6

--- a/modules/parrot_mysql/templates/parrot.cnf.erb
+++ b/modules/parrot_mysql/templates/parrot.cnf.erb
@@ -8,7 +8,7 @@ query_cache_size        = <%= scope.lookupvar('parrot_mysql::config::mysql_query
 innodb_buffer_pool_size = <%= scope.lookupvar('parrot_mysql::config::innodb_buffer_pool_size') %>
 key_buffer_size = <%= scope.lookupvar('parrot_mysql::config::key_buffer_size') %>
 max_connections = <%= scope.lookupvar('parrot_mysql::config::mysql_max_connections') %>
-table_cache = <%= scope.lookupvar('parrot_mysql::config::table_cache') %>
+table_open_cache = <%= scope.lookupvar('parrot_mysql::config::table_cache') %>
 
 default_storage_engine  = innodb
 <% if (lsbdistcodename == 'precise') %># Not needed for Precise
