--- a/modules/http_stack/templates/apache/vhost.erb
+++ b/modules/http_stack/templates/apache/vhost.erb
@@ -10,15 +10,7 @@
 	<Directory /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
-		<IfModule mod_authz_core.c>
-			# For Apache 2.4
-      Require all granted
-   </IfModule>
-   <IfModule !mod_authz_core.c>
-   	# For apache 2.2
-     Order allow,deny
-     allow from all
-    </IfModule>
+        Require all granted
 	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -28,6 +20,8 @@
 	LogLevel warn
 
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9999/vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/$1
 
 </VirtualHost>
 
@@ -44,15 +38,7 @@
 		<Directory /vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
-      <IfModule mod_authz_core.c>
-        # For Apache 2.4
-        Require all granted
-      </IfModule>
-      <IfModule !mod_authz_core.c>
-   	    # For apache 2.2
-        Order allow,deny
-        allow from all
-      </IfModule>
+            Require all granted
 		</Directory>
 
 		ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -66,6 +52,8 @@
 		SSLEngine on
 		SSLCertificateFile /etc/apache2/ssl.d/<%= @name %>.crt
         SSLCertificateKeyFile /etc/apache2/ssl.d/<%= @name %>.key
+
+        ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9999/vagrant_sites/<%= @name %><%= @apache_vhost_webroot_subdir %>/$1
 
 	</VirtualHost>
 </IfModule>
