--- a/modules/http_stack/templates/apache/xhprof.conf.erb
+++ b/modules/http_stack/templates/apache/xhprof.conf.erb
@@ -6,4 +6,8 @@ alias /xhprof "/usr/share/php/xhprof_html/"
     Order allow,deny
     allow from all
     DirectoryIndex index.php
+
+    <FilesMatch "\.php$">
+      SetHandler  "proxy:fcgi://127.0.0.1:9999"
+    </FilesMatch>
 </Directory>
